# sugar

./: CMakeLists.txt  README.md  adt.h  error.c  error.h
adt/: buffer.c  buffer.h  map.c  map.h  queue.c  queue.h  sv.c  sv.h  vec.c  vec.h
